--- a/getting-started.html
+++ b/getting-started.html
@@ -69,9 +69,9 @@
 <li><a href="./">DAVe.docs</a></li>
 
 <li class="divider"></li>
-<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Getting Started</a><ul>
-<li class="chapter" data-level="1.1" data-path="index.html"><a href="index.html#quickstart"><i class="fa fa-check"></i><b>1.1</b> Quickstart</a></li>
-<li class="chapter" data-level="1.2" data-path="index.html"><a href="index.html#workflows"><i class="fa fa-check"></i><b>1.2</b> Workflows</a></li>
+<li class="chapter" data-level="1" data-path="getting-started.html"><a href="getting-started.html"><i class="fa fa-check"></i><b>1</b> Getting Started</a><ul>
+<li class="chapter" data-level="1.1" data-path="getting-started.html"><a href="getting-started.html#quickstart"><i class="fa fa-check"></i><b>1.1</b> Quickstart</a></li>
+<li class="chapter" data-level="1.2" data-path="getting-started.html"><a href="getting-started.html#workflows"><i class="fa fa-check"></i><b>1.2</b> Workflows</a></li>
 </ul></li>
 <li class="chapter" data-level="2" data-path="modules.html"><a href="modules.html"><i class="fa fa-check"></i><b>2</b> Modules</a><ul>
 <li class="chapter" data-level="2.1" data-path="modules.html"><a href="modules.html#data"><i class="fa fa-check"></i><b>2.1</b> Data</a><ul>
@@ -447,13 +447,13 @@ gitbook.start({
 "link": null,
 "text": null
 },
-"download": null,
+"download": [["dave_manual.pdf", "PDF"]],
 "toc": {
 "collapse": "section",
 "scroll_highlight": true,
 "toc_depth": 3
 },
-"search": true,
+"search": false,
 "info": false
 });
 });
